--- a/Flagrum.Web/_Imports.razor
+++ b/Flagrum.Web/_Imports.razor
@@ -10,6 +10,7 @@
 @using Flagrum.Web.Layout
 @using Flagrum.Web.Components.Controls
 @using Flagrum.Web.Components.Layout
+@using Flagrum.Web.Services
 @using Blazor.Diagrams.Core;
 @using Blazor.Diagrams.Core.Models;
 @using Blazor.Diagrams.Components;
