--- a/Flagrum.Web/Components/Controls/Button.razor
+++ b/Flagrum.Web/Components/Controls/Button.razor
@@ -1,5 +1,5 @@
-﻿<div class="bg-accent2-900 pl-1 pr-1.5 pt-1 pb-0.5 text-grey-100 inline-flex flex-row items-center rounded flex-shrink-0 cursor-pointer hover:bg-accent2 @CssClass"
-     @onclick="OnClick">
+﻿<div class="@(IsDisabled ? "bg-grey-800 text-grey-400" : "bg-accent2-900 text-grey-100 hover:bg-accent2-700") pl-1 pr-1.5 pt-1 pb-0.5 inline-flex flex-row items-center rounded flex-shrink-0 cursor-pointer @CssClass"
+     @onclick="HandleClick">
     <div>
         <span class="material-icons-outlined text-sm">@Icon</span>
     </div>
@@ -21,4 +21,15 @@
 
     [Parameter]
     public string CssClass { get; set; }
+
+    [Parameter]
+    public bool IsDisabled { get; set; }
+
+    private void HandleClick()
+    {
+        if (!IsDisabled)
+        {
+            OnClick();
+        }
+    }
 }
