--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -1,8 +1,11 @@
 ﻿<CascadingValue Value="this">
-    <div class="h-full bg-dark flex-shrink-0">
-        <MenuItem Icon="build" Text="Mod Manager" DefaultActive="true" Uri="/"/>
+    <div class="h-full bg-dark flex-shrink-0 flex flex-col">
+        <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
         <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/>
         <MenuItem Icon="search" Text="File Inspector" Uri="/inspector"/>
+        <div class="flex-grow"></div>
+        <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"></MenuItem>
+        <MenuItem Icon="settings" Text="Settings" Uri="/settings"></MenuItem>
     </div>
 </CascadingValue>
 
