Improvements to normals/tangents and fixes for binmodlist being rebuilt by game

--- a/Flagrum.Web/Features/ModManager/Components/ModListingCard.razor
+++ b/Flagrum.Web/Features/ModManager/Components/ModListingCard.razor
@@ -5,7 +5,7 @@
 @inject AppStateService AppState
 
 <div class="shadow-lg mx-2.5 mt-6 bg-grey-800">
-    <div style="position:relative;width:180px;height:180px;background-size: 180px 180px;"
+    <div style="position:relative;width:180px;height:180px;background-repeat: no-repeat; background-size: contain; background-position: center; background-color: #000"
          id="@Mod.Uuid"
          class="preview-@Mod.Uuid">
         <Checkbox CssStyle="margin-top:-7px;margin-right:-7px;position:absolute;top:-5px;right:-5px;"
